--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link" href="../contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../signup/signup.html">Sign up</a>
+              <a class="nav-link" href="./signup/signup.html">Sign up</a>
             </li>
             <li class="nav-item">
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart"><span style="width: 30px; height: 30px;" class="iconify" data-icon="ant-design:shopping-twotone"></span> (<span class="total-count"></span>)</button>
@@ -93,7 +93,7 @@
                     <div class="row">
                         <div class="col-sm-3">
                             <div class="card" >
-                                     <a href="../Product/product_1.html"><img class="card-img-top" src="../Product/image pro 1/pic1_1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a>  
+                                     <a href="./Product/product_1.html"><img class="card-img-top" src="./Product/image pro 1/pic1_1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a>  
                                 <div class="card-body">
                                      <h4 class="card-title">Silverton 43 Sports</h4>
                                      <p class="card-text">3.000$ / 1 hour</p>
