--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./home/home.html">Home</a>
+              <a class="nav-link" href="home/home.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../About/about3.html">About Us</a>
+              <a class="nav-link" href="About/about3.html">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Gallery/gallery.html">Gallery</a>
+              <a class="nav-link" href="Gallery/gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../contact.html">Contact Us</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./signup/signup.html">Sign up</a>
+              <a class="nav-link" href="signup/signup.html">Sign up</a>
             </li>
             <li class="nav-item">
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart"><span style="width: 30px; height: 30px;" class="iconify" data-icon="ant-design:shopping-twotone"></span> (<span class="total-count"></span>)</button>
@@ -58,8 +58,8 @@
     <section class="slider">
         <div id="mySlider" class="carousel slide" data-ride="carousel">
             <video autoplay loop muted class="video-inner">
-                <source type="video/mp4" src="home.mp4">
-                <source type="video/webm" src="home.mp4">
+                <source type="video/mp4" src="home/home.mp4">
+                <source type="video/webm" src="home/home.mp4">
             </video>
         </div>
     </section>
