--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mixitup/3.2.2/mixitup.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
-    <script src="home.js"></script>
+    <script src="home/home.js"></script>
     <link rel="stylesheet" href="home/home.css">
     <title>HOME</title>
 </head>
