--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <script src="home/home.js"></script>
     <link rel="stylesheet" href="home/home.css">
-    <title>HOME</title>
+    <title>MARINA FLEET</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
@@ -162,7 +162,7 @@
   
                                 <div class="col-sm-3">
                                     <div class="card" >
-                                            <a href=""><img class="card-img-top" src="noithat/lux4-1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a> 
+                                            <a href="Product/product_4.html"><img class="card-img-top" src="noithat/lux4-1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a> 
                                         <div class="card-body">
                                             <h4 class="card-title">Eclipse</h4>
                                             <p class="card-text"> 1380$ / 1 hour </p>
@@ -173,7 +173,7 @@
         
                                <div class="col-sm-3">
                                      <div class="card" >
-                                                <a href=""><img class="card-img-top" src="noithat/lux5-1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a> 
+                                                <a href="Product/product_5.html"><img class="card-img-top" src="noithat/lux5-1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a> 
                                          <div class="card-body">
                                                 <h4 class="card-title">Azzam</h4>
                                                 <p class="card-text">1400$  / 1 hour</p>
@@ -184,7 +184,7 @@
         
                                <div class="col-sm-3">
                                 <div class="card" >
-                                         <a href=""><img class="card-img-top" src="noithat/lux6-1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a> 
+                                         <a href="Product/product_6.html"><img class="card-img-top" src="noithat/lux6-1.jpg" alt="Card image" style="width: 100%;height: 190px;border: 3px white solid;"></a> 
                                     <div class="card-body">
                                          <h4 class="card-title">Margaret</h4>
                                          <p class="card-text">1650$  / 1 hour</p>
