--- a/About/about3.html
+++ b/About/about3.html
@@ -112,8 +112,8 @@
             <div class="col-sm-4"><img src="pic1.webp" alt=""></div>
             <div class="col-sm-1"></div>
             <div class="col-sm-7" style="text-align:left"> <strong style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; letter-spacing:0.2em; font-size: 31px;">EYESIGHT</strong>
-                <p>"Chúng tôi phấn đấu không ngừng tìm tòi học hỏi để trở thành công ty cung cấp dịch vụ du thuyền đáng tin cậy 
-                đối với khách hàng Việt Nam thông qua những kiến thức và kinh nghiệm chuyên môn tích luỹ được trong nhiều năm."
+                <p>
+                    "We strive to constantly learn to become a reliable yacht service provider for Vietnamese customers through the knowledge and professional experience accumulated over the years."
                 </p>
             </div> 
         </div> 
@@ -122,11 +122,8 @@
             <div class="col-sm-4"><img src="pic2.webp" alt=""></div>
             <div class="col-sm-1"></div>
             <div class="col-sm-7" style="text-align:left"> <strong style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; letter-spacing:0.2em; font-size: 31px;">MISSION</strong>
-                <p>Chúng tôi với sứ mệnh mang đến sự an tâm, hài lòng, và tiết kiệm cho khách hàng của mình. 
-                    Hiểu rõ cách thức vận hành và chăm sóc du thuyền theo đúng quy định của hãng nhằm đảm bảo độ bền và tuổi thọ của tàu và các thiết bị trên tàu. 
-                    ​Cung cấp dịch vụ cho thuê du thuyền tốt nhất với phong cách phục vụ chuyên nghiệp được đào tạo bài bản từ các chuyên gia. 
-                    ​Quản lý, đào tạo, và chuyển giao đội ngũ thuyền viên chuyên nghiệp theo tiêu chuẩn quốc tế. 
-                    Chung tay xây dựng và phát triển ngành công nghiệp du thuyền Việt nam. 
+                <p>
+                    We have a mission to bring peace of mind, satisfaction, and savings to our customers. Understand how to operate and care for yachts in accordance with the company's regulations to ensure the durability and longevity of the ship and its equipment. Provide the best yacht rental service with a professional service style trained by experts. Management, training, and transfer of professional crew members according to international standards. Join hands to build and develop Vietnam's yacht industry.
                 </p>
             </div>
         </div>
