--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
     <script src="home/home.js"></script>
     <link rel="stylesheet" href="home/home.css">
-    <title> MARINA FLEET</title>
+    <title>MARINA FLEET</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
@@ -497,10 +497,10 @@
           <div class="col-xs-12 col-sm-6 col-md-2 footers-two">
              <h5> Quick link </h5>
              <ul class="list-unstyled">
-            <li><a href="../home/home.html">Home</a></li>
-            <li><a href="../Gallery/gallery.html">Gallery</a></li>
-            <li><a href="../signup/signup.html">Sign up</a></li>
-            <li><a href="../contact.html">Contact us</a></li>
+            <li><a href="home/home.html">Home</a></li>
+            <li><a href="Gallery/gallery.html">Gallery</a></li>
+            <li><a href="signup/signup.html">Sign up</a></li>
+            <li><a href="contact.html">Contact us</a></li>
            </ul>
          </div>
           <div class="col-xs-12 col-sm-6 col-md-2 footers-three">
