--- a/signup/signup.html
+++ b/signup/signup.html
@@ -89,7 +89,7 @@ label{
           <a class="nav-link" href="../Gallery/gallery.html">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="../contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../signup/signup.html">Sign in</a>
