--- a/contact.html
+++ b/contact.html
@@ -364,7 +364,7 @@ body{
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-6 footers-one">
                  <div class="footers-logo">
-                     <img src="../Marina Fleet.png" alt="Logo" style="width:200px;">
+                     <img src="Marina Fleet.png" alt="Logo" style="width:200px;">
                  </div>
                  <div class="footers-info mt-3">
                      <p>Before you leave to explore islands and the sea, just contact us for getting some good advises. Our expert has direct access for the best charter price. We can help you to understand the terms for your favourite boat rental.</p>
@@ -379,9 +379,9 @@ body{
               <div class="col-xs-12 col-sm-6 col-md-2 footers-two">
                  <h5> Quick link </h5>
                  <ul class="list-unstyled">
-                <li><a href="home/home.html">Home</a></li>
-                <li><a href="Gallery/gallery.html">Gallery</a></li>
-                <li><a href="signup/signup.html">Sign up</a></li>
+                <li><a href="./home/home.html">Home</a></li>
+                <li><a href="./Gallery/gallery.html">Gallery</a></li>
+                <li><a href="./signup/signup.html">Sign up</a></li>
                 <li><a href="contact.html">Contact us</a></li>
                </ul>
              </div>
