--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
           <div class="col-xs-12 col-sm-6 col-md-2 footers-two">
              <h5> Quick link </h5>
              <ul class="list-unstyled">
-            <li><a href="home/home.html">Home</a></li>
-            <li><a href="Gallery/gallery.html">Gallery</a></li>
-            <li><a href="signup/signup.html">Sign up</a></li>
+            <li><a href="./home/home.html">Home</a></li>
+            <li><a href="./Gallery/gallery.html">Gallery</a></li>
+            <li><a href="./signup/signup.html">Sign up</a></li>
             <li><a href="contact.html">Contact us</a></li>
            </ul>
          </div>
