--- a/home/home.html
+++ b/home/home.html
@@ -97,7 +97,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Supperyacht A</h4>
                                      <p class="card-text">1650$ / 1 hour</p>
-                                     <a href="../Product/product_1.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                     <a href="../Product/product_1.html" class="btn btn-info">View Infomation</a> <a href="../word/Supperyacht A.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Scarlet Pearl</h4>
                                     <p class="card-text">1450$ / 1 hour</p>
-                                    <a href="../Product/product_2.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="../Product/product_2.html" class="btn btn-info">View Infomation</a> <a href="../word/Scarlet Pearl.docx" class="btn btn-info">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Panakeia</h4>
                                     <p class="card-text">1560$ / 1 hour</p>
-                                    <a href="../Product/product_3.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="../Product/product_3.html" class="btn btn-info">View Infomation</a> <a href="../word/Panakeia.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                                         <div class="card-body">
                                             <h4 class="card-title">Eclipse</h4>
                                             <p class="card-text"> 1380$ / 1 hour </p>
-                                            <a href="" class="btn btn-info">View Infomation</a> <a href="" class="btn btn-info">Download</a>
+                                            <a href="" class="btn btn-info">View Infomation</a> <a href="../word/Eclipse.docx" class="btn btn-info">Download</a>
                                        </div>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                          <div class="card-body">
                                                 <h4 class="card-title">Azzam</h4>
                                                 <p class="card-text">1400$ / 1 hour</p>
-                                                <a href="" class="btn btn-info">View Infomation</a> <a href="" class="btn btn-info ">Download</a>
+                                                <a href="" class="btn btn-info">View Infomation</a> <a href="../word/Azzam.docx" class="btn btn-info ">Download</a>
                                         </div>
                                     </div>
                                </div>
@@ -191,7 +191,7 @@
                                     <div class="card-body">
                                          <h4 class="card-title">Margaret</h4>
                                          <p class="card-text">1650$ / 1 hour</p>
-                                         <a href="" class="btn btn-info">View Infomation</a> <a href="" class="btn btn-info ">Download</a>
+                                         <a href="" class="btn btn-info">View Infomation</a> <a href="../word/Margaret.docx" class="btn btn-info ">Download</a>
                                     </div>
                                  </div>
                             </div>
@@ -209,7 +209,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Maltese Falcom</h4>
                                      <p class="card-text">1240$ / 1 hour</p>
-                                     <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                     <a href="#" class="btn btn-info">View Infomation</a> <a href="../word/Maltese Falcom.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Black Pearl</h4>
                                     <p class="card-text">1300$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="../word/Black Pearl.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -231,7 +231,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">SignatureCruise Halong</h4>
                                     <p class="card-text">1250$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="../word/SignatureCruise Halong.docx" class="btn btn-info">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -293,7 +293,7 @@
                                <div class="card-body">
                                    <h4 class="card-title">Sailing Yacht A</h4>
                                    <p class="card-text">  1390$ / 1 hour</p>
-                                   <a href="../Product/product_10.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                   <a href="../Product/product_10.html" class="btn btn-info">View Infomation</a> <a href="../word/Sailingyacht A.docx" class="btn btn-info ">Download</a>
                                </div>
                             </div>
                          </div>
@@ -304,7 +304,7 @@
                                  <div class="card-body">
                                     <h4 class="card-title">Golden Horizon</h4>
                                     <p class="card-text">1250$ / 1 hour</p>
-                                    <a href="../Product/product_11.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="../Product/product_11.html" class="btn btn-info">View Infomation</a> <a href="../word/Golden Horizon.docx" class="btn btn-info">Download</a>
                                 </div>
                              </div>
                         </div>
@@ -315,7 +315,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Paradise Luxury</h4>
                                     <p class="card-text">1300$ / 1 hour</p>
-                                    <a href="../Product/product_12.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="../Product/product_12.html" class="btn btn-info">View Infomation</a> <a href="../word/Paradise Luxury.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -333,7 +333,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Merry Fisher 795</h4>
                                      <p class="card-text">950$ / 1 hour</p>
-                                     <a href="../Product/product_7.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                     <a href="../Product/product_7.html" class="btn btn-info">View Infomation</a> <a href="../word/MerryFisher.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -344,7 +344,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Viking 55 Convertible </h4>
                                     <p class="card-text">1000$ / 1 hour</p>
-                                    <a href="../Product/product_8.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="../Product/product_8.html" class="btn btn-info">View Infomation</a> <a href="../word/Viking55.docx" class="btn btn-info">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -355,7 +355,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Jarrett Bay 46′ Grander</h4>
                                     <p class="card-text">700$ / 1 hour</p>
-                                    <a href="../Product/product_8.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="../Product/product_8.html" class="btn btn-info">View Infomation</a> <a href="../word/Jarret Bay.docx" class="btn btn-info ">Download</a>
                                 </div>
                              </div>
                         </div>
@@ -421,7 +421,7 @@
                                 <div class="card-body">
                                       <h4 class="card-title">Spencer 70 IPS</h4>
                                       <p class="card-text">500$ / 1 hour</p>
-                                      <a href="../Product/product_16.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                      <a href="../Product/product_16.html" class="btn btn-info">View Infomation</a> <a href="../word/SpencerIBS.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -432,7 +432,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Tiara 4300 Open</h4>
                                      <p class="card-text">1000$ / 1 hour</p>
-                                     <a href="../Product/product_17.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                     <a href="../Product/product_17.html" class="btn btn-info">View Infomation</a> <a href="../word/Tiara4300.docx" class="btn btn-info">Download</a>
                                  </div>
                             </div>
                         </div>
@@ -443,7 +443,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">PURSUIT C 310</h4>
                                     <p class="card-text">900$ / 1 hour</p>
-                                    <a href="../Product/product_18.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="../Product/product_18.html" class="btn btn-info">View Infomation</a> <a href="../word/Pursuit.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
