--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -30,7 +30,7 @@
           <a class="nav-link" href="../contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../signup/signup.html">Sign in</a>
+          <a class="nav-link" href="../signup/signup.html">Sign up</a>
         </li>
         <li class="nav-item">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart"><span style="width: 30px; height: 30px;" class="iconify" data-icon="ant-design:shopping-twotone"></span> (<span class="total-count"></span>)</button>
