--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Supperyacht A</h4>
                                      <p class="card-text">1500$ / 1 hour</p>
-                                     <a href="../Product/product_1.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                     <a href="../Product/product_1.html" class="btn btn-info">View Infomation</a> <a href="./word/Supperyacht A.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -108,7 +108,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Scarlet Pearl</h4>
                                     <p class="card-text">1450$ / 1 hour</p>
-                                    <a href="../Product/product_2.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="../Product/product_2.html" class="btn btn-info">View Infomation</a> <a href="./word/Scarlet Pearl.docx" class="btn btn-info">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Panakeia</h4>
                                     <p class="card-text">1560$/ 1 hour</p>
-                                    <a href="../Product/product_3.html" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="../Product/product_3.html" class="btn btn-info">View Infomation</a> <a href="./word/Panakeia.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +166,7 @@
                                         <div class="card-body">
                                             <h4 class="card-title">Eclipse</h4>
                                             <p class="card-text"> 1380$ / 1 hour </p>
-                                            <a href="" class="btn btn-info">View Infomation</a> <a href="" class="btn btn-info">Download</a>
+                                            <a href="" class="btn btn-info">View Infomation</a> <a href="./word/Eclipse.docx" class="btn btn-info">Download</a>
                                        </div>
                                     </div>
                                 </div>
@@ -177,7 +177,7 @@
                                          <div class="card-body">
                                                 <h4 class="card-title">Azzam</h4>
                                                 <p class="card-text">1400$  / 1 hour</p>
-                                                <a href="" class="btn btn-info">View Infomation</a> <a href="" class="btn btn-info ">Download</a>
+                                                <a href="" class="btn btn-info">View Infomation</a> <a href="./word/Azzam.docx" class="btn btn-info ">Download</a>
                                         </div>
                                     </div>
                                </div>
@@ -188,7 +188,7 @@
                                     <div class="card-body">
                                          <h4 class="card-title">Margaret</h4>
                                          <p class="card-text">1650$  / 1 hour</p>
-                                         <a href="" class="btn btn-info">View Infomation</a> <a href="" class="btn btn-info ">Download</a>
+                                         <a href="" class="btn btn-info">View Infomation</a> <a href="./word/Margaret.docx" class="btn btn-info ">Download</a>
                                     </div>
                                  </div>
                             </div>
@@ -206,7 +206,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Maltese Falcom</h4>
                                      <p class="card-text">1240$ / 1 hour</p>
-                                     <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                     <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Maltese Falcom.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -217,7 +217,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Black Pearl</h4>
                                     <p class="card-text">1300$ / 1 hour </p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Black Pearl.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -228,7 +228,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">SignatureCruise Halong</h4>
                                     <p class="card-text">1250$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/SignatureCruise Halong.docx" class="btn btn-info">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -287,7 +287,7 @@
                                <div class="card-body">
                                    <h4 class="card-title">Sailing Yacht A</h4>
                                    <p class="card-text"> 1390$ / 1 hour</p>
-                                   <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                   <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Sailingyacht A.docx" class="btn btn-info ">Download</a>
                                </div>
                             </div>
                          </div>
@@ -298,7 +298,7 @@
                                  <div class="card-body">
                                     <h4 class="card-title">Golden Horizon</h4>
                                     <p class="card-text">1250$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Golden Horizon.docx" class="btn btn-info">Download</a>
                                 </div>
                              </div>
                         </div>
@@ -309,7 +309,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Paradise Luxury</h4>
                                     <p class="card-text">1300$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Paradise Luxury.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -327,7 +327,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Merry Fisher 795</h4>
                                      <p class="card-text">950$ / 1 hour</p>
-                                     <a href="" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                     <a href="" class="btn btn-info">View Infomation</a> <a href="./word/MerryFisher.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Viking 55 Convertible </h4>
                                     <p class="card-text">1000$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Viking55.docx" class="btn btn-info">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -349,7 +349,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Jarrett Bay 46′ Grander</h4>
                                     <p class="card-text">700$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Jarret Bay.docx" class="btn btn-info ">Download</a>
                                 </div>
                              </div>
                         </div>
@@ -412,7 +412,7 @@
                                 <div class="card-body">
                                       <h4 class="card-title">Spencer 70 IPS</h4>
                                       <p class="card-text">500$ / 1 hour</p>
-                                      <a href="" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                      <a href="" class="btn btn-info">View Infomation</a> <a href="./word/SpencerIBS.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                                 <div class="card-body">
                                      <h4 class="card-title">Tiara 4300 Open</h4>
                                      <p class="card-text">1000$ / 1 hour</p>
-                                     <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info">Download</a>
+                                     <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Tiara4300.docx" class="btn btn-info">Download</a>
                                  </div>
                             </div>
                         </div>
@@ -434,7 +434,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">PURSUIT C 310</h4>
                                     <p class="card-text">900$ / 1 hour</p>
-                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="#" class="btn btn-info ">Download</a>
+                                    <a href="#" class="btn btn-info">View Infomation</a> <a href="./word/Pursuit.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
