--- a/signup/signup.html
+++ b/signup/signup.html
@@ -92,7 +92,7 @@ label{
           <a class="nav-link" href="../contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../signup/signup.html">Sign in</a>
+          <a class="nav-link" href="../signup/signup.html">Sign up</a>
         </li>
         <li class="nav-item">
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cart">Cart (<span class="total-count"></span>)</button>
