--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Scarlet Pearl</h4>
                                     <p class="card-text">1450$ / 1 hour</p>
-                                    <a href="../Product/product_2.html" class="btn btn-info">View Infomation</a> <a href="./word/Scarlet Pearl.docx" class="btn btn-info">Download</a>
+                                    <a href="./Product/product_2.html" class="btn btn-info">View Infomation</a> <a href="./word/Scarlet Pearl.docx" class="btn btn-info">Download</a>
                                 </div>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                                 <div class="card-body">
                                     <h4 class="card-title">Panakeia</h4>
                                     <p class="card-text">1560$/ 1 hour</p>
-                                    <a href="../Product/product_3.html" class="btn btn-info">View Infomation</a> <a href="./word/Panakeia.docx" class="btn btn-info ">Download</a>
+                                    <a href="./Product/product_3.html" class="btn btn-info">View Infomation</a> <a href="./word/Panakeia.docx" class="btn btn-info ">Download</a>
                                 </div>
                             </div>
                         </div>
