--- a/Product/product_11.html
+++ b/Product/product_11.html
@@ -555,7 +555,7 @@ body{
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button class="clear-cart btn btn-danger">Clear Cart</button>
-          <button type="button" class="btn btn-primary">Order now</button>
+          <a href="../checkout.html"><button type="button" class="btn btn-primary">Order now</button></a>
         </div>
       </div>
     </div>
