--- a/contact.html
+++ b/contact.html
@@ -416,5 +416,7 @@ body{
     <script src="https://kit.fontawesome.com/d15efe8da9.js" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="Gallery/gallery.js">
+
 </body>
 </html>
