--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
     <script src="https://kit.fontawesome.com/d15efe8da9.js" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <link rel="stylesheet" href="Gallery/gallery.js">
+    <link rel="stylesheet" href="./Gallery/gallery.js">
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script> 
 </body>
 </html>
