--- a/signup/signup.html
+++ b/signup/signup.html
@@ -229,6 +229,6 @@ label{
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
-    <link rel="stylesheet" href="../Gallery/gallery.js">
+    <script src="../Gallery/gallery.js"></script>
 </body>
 </html>
