--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           <button class="clear-cart btn btn-danger">Clear Cart</button>
-          <a href="../checkout.html"><button type="button" class="btn btn-primary">Order now</button></a>
+          <a href="./checkout.html"><button type="button" class="btn btn-primary">Order now</button></a>
         </div>
       </div>
     </div>
