--- a/Product/product_2.html
+++ b/Product/product_2.html
@@ -224,7 +224,7 @@ img
           <a class="nav-link" href="../Gallery/gallery.html">Gallery</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
+          <a class="nav-link" href="../contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="../signup/signup.html">Sign up</a>
